# computational-methods

./: .gitignore  README.md
01_spline/: 01_spline.pro
01_spline/docs/: report.docx
01_spline/include/: loadingdialog.h  mainwindow.h  pointdialog.h  spline.h  splinechart.h
01_spline/src/: loadingdialog.cpp  mainwindow.cpp  pointdialog.cpp  spline.cpp  splinechart.cpp
01_spline/ui/: aboutdialog.ui  helpdialog.ui  loadingdialog.ui  mainwindow.ui  pointdialog.ui
02_systems/: 02_systems.pro
02_systems/docs/: report.docx
02_systems/include/: datarequestdialog.h  firstapproximationtablemodel.h  gaussmethodsolver.h  jacobimethodsolver.h  kramermethodsolver.h  lesystemsolver.h  mainwindow.h  matrix.h  method.h  seidelmethodsolver.h  simpleiterationmethodsolver.h  (+2 more)
03_rungekutta/: 03_rungekutta.pro  CMakeLists.txt  README.md
03_rungekutta/docs/: report.docx
03_rungekutta/include/: aboutdialog.h  abstractaccuratesolution.h  abstractequationsystem.h  abstracttelemetry.h  config.h  helpdialog.h  mainwindow.h  mocktelemetry.h  mvlatelemetry.h  myaccuratesolution.h  myequationsystem.h  plotsdialog.h  rkmethodsolver.h  solutiontablemodel.h
03_rungekutta/include/telemetry/: config.h  inc.h  service.h
03_rungekutta/src/: abstractaccuratesolution.cpp  abstractequationsystem.cpp  main.cpp  mainwindow.cpp  mvlatelemetry.cpp  myaccuratesolution.cpp  myequationsystem.cpp  plotsdialog.cpp  rkmethodsolver.cpp  solutiontablemodel.cpp  telemetryservice.cpp
03_rungekutta/ui/: aboutdialog.ui  helpdialog.ui  mainwindow.ui  plotsdialog.ui
04_heating/: 04_heating.pro
(+25 files in other folders)
